Add additional env in sample

--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,4 @@
 # Copy contents in this file to another file named `.env` and add the API_KEY.
 # See the Discord for the API key.
 REACT_APP_API_KEY=YOUR-API-KEY-HERE
+REACT_APP_ENV=development
