--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "scholar-power",
   "version": "0.0.1",
   "private": true,
-  "browser": {
-    "crypto": false
-  },
   "dependencies": {
     "@capacitor/app": "4.1.1",
     "@capacitor/core": "4.6.2",
@@ -24,7 +21,7 @@
     "@types/react-router-dom": "^5.1.7",
     "history": "^4.9.0",
     "ionicons": "^6.0.3",
-    "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^5.2.0",
@@ -70,8 +67,7 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "4.6.2",
-    "@types/jsonwebtoken": "^9.0.1"
+    "@capacitor/cli": "4.6.2"
   },
   "description": "An Ionic project"
 }
