--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "history": "^4.9.0",
     "ionicons": "^6.0.3",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^5.2.0",
@@ -67,7 +68,8 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "4.6.2"
+    "@capacitor/cli": "4.6.2",
+    "@types/lodash": "^4.14.191"
   },
   "description": "An Ionic project"
 }
