add api key for nin example

--- a/sample.env
+++ b/sample.env
@@ -1,4 +1,5 @@
 # Copy contents in this file to another file named `.env` and add the API_KEY.
 # See the Discord for the API key.
 REACT_APP_API_KEY=YOUR-API-KEY-HERE
+REACT_APP_API_NINJA_KEY=YOUR-NINJA-API-KEY-HERE
 REACT_APP_ENV=development
